k8s-deployments/simple-counter-with-service-account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-counter-with-service-account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-counter
  template:
    metadata:
      labels:
        app: simple-counter
    spec:
      serviceAccountName: collector-sa
      automountServiceAccountToken: true
      containers:
      - name: simple-counter-container
        image: iad.ocir.io/oardccsi/jfr-k8s
        imagePullPolicy: Always
