k8s-deployments/simple-counter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-counter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-counter
  template:
    metadata:
      labels:
        app: simple-counter
    spec:
      containers:
      - name: simple-counter-container
        image: iad.ocir.io/oardccsi/jfr-k8s
        imagePullPolicy: Always
