k8s-deployments/simple-counter-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-counter-port
spec:
  type: NodePort
  selector:
    app: simple-counter
  ports:
    - name: "jfr-jmx"
      port: 9091
      targetPort: 9091
